@@ -1,6 +1,7 @@
 Revision history for DBIx::Class
 
 0.05001
+        - added multi-join (join => [ 'foo', 'foo' ]), aliases second to foo_2
         - hack PK::Auto::Pg for "table" names referencing a schema
         - find() with attributes works
         - added experimental Serialize and ResultSetManager components
